# vc-trading-cards

./: .gitignore  Dockerfile.combined  README.md  config.py  docker-compose.yml  main.py  pyproject.toml
agent/: .env.example  Dockerfile  README.md  argfile.yml  entrypoint.py
agent/caddy/: Caddyfile  README.md
app/: __init__.py  utils.py
app/models/: cards.py  credentials.py  events.py  users.py  web_requests.py
app/plugins/: askar.py
app/routers/: cards.py
app/static/: context.py  samples.py
backend/: .dockerignore  .env.example  Dockerfile  README.md  config.py  main.py  pyproject.toml
backend/app/: __init__.py  db.py  dependencies.py  draw.py  image_analysis.py  image_sync.py  provision_set.py  schemas.py  security.py
backend/app/admin/: __init__.py  routes.py
backend/app/auth/: __init__.py  discord.py  routes.py  session.py  webauthn.py  webauthn_store.py
backend/app/auth/providers/: __init__.py  discord.py  twitch.py
backend/app/public/: __init__.py  routes.py
backend/app/routers/: admin.py  auth.py  discord_bot.py  public.py  wallet.py  webauthn_routes.py
backend/app/services/: __init__.py  acapy.py  discord.py  routes.py
backend/app/wallet/: __init__.py  routes.py
backend/scripts/: register_discord_commands.py
backend/tests/: conftest.py  test_api.py  test_session.py
frontend/: .dockerignore  .env.example  Dockerfile  components.json  netlify.toml  package-lock.json  package.json  svelte.config.js  tsconfig.json  vercel.json  vite.config.js
frontend/docs/: DEPLOYMENT.md
frontend/src/: app.css  app.d.ts  app.html  hooks.server.js  hooks.server.ts
frontend/src/lib/: api.ts  (+2 more)
ocr-service/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
(+26 files in other folders)
